--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -9,10 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ macos-latest ]
         python-version:
-          - "3.10"
-          - "3.11"
           - "3.12"
     name: "test"
     runs-on: ${{ matrix.os }}
@@ -27,6 +25,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
+
+    - name: "Run Flask"
+      run: |
+        python main.py
 
     - name: Run tests
       run: pytest
