--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -25,6 +25,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
+
+    - name: Pull MongoDB image
+      uses: actions/docker/pull-image@v5
+      with:
+        name: mongo:8.0
     
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.11.0
