--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -25,6 +25,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: "Create docker image"
+      run: |
+        docker run --name some-mongo -d mongo:tag
 
     - name: Start MongoDB
       uses: MongoCamp/mongodb-github-action@1.0.0
