--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -24,7 +24,7 @@ jobs:
     - name: "Install dependencies"
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r ../requirements.txt
+        python -m pip install -r ./requirements.txt
         
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.11.0
